--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,9 +1,10 @@
 cmake_minimum_required(VERSION 3.28) # For Modules
+cmake_minimum_required(VERSION 3.28) # For Modules
 
 project(gbs LANGUAGES C CXX)
 
 # c++ conf
-set(CMAKE_CXX_STANDARD 20)          
+set(CMAKE_CXX_STANDARD 23)          
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS ON)
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
