--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,7 @@ cmake_minimum_required(VERSION 3.28) # For Modules
 project(gbs LANGUAGES C CXX)
 
 # c++ conf
-set(CMAKE_CXX_STANDARD 23)          
+set(CMAKE_CXX_STANDARD 20)          
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS ON)
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
@@ -80,6 +80,28 @@ target_sources(vecop
     FILE_SET CXX_MODULES FILES
     gbs/vecop.ixx
 )
+
+add_library(math)
+target_sources(math
+  PUBLIC
+    FILE_SET CXX_MODULES FILES
+    gbs/math.ixx
+)
+target_link_libraries(math
+    vecop
+)
+
+# file(GLOB SRC_LIST "gbs/*.ixx")
+# foreach(file_name ${SRC_LIST})
+#     get_filename_component(module_name ${file_name} NAME_WE  )
+#     message("Configuring module " ${module_name} ", from file " ${file_name})
+#     add_library(${module_name})
+#     target_sources(${module_name}
+#         PUBLIC
+#             FILE_SET CXX_MODULES FILES
+#             ${file_name}
+#     )
+# endforeach()
 
 # TBB
 if(UNIX)
