add basis function module

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,6 +8,7 @@ set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS ON)
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
+# set(CMAKE_EXPORT_COMPILE_COMMANDS ON) # Usefull for debug
 if ( MSVC )
     # set(CMAKE_CXX_FLAGS     "${CMAKE_CXX_FLAGS} /fp:fast /arch:AVX512")
     set(CMAKE_CXX_FLAGS     "${CMAKE_CXX_FLAGS} /fp:fast /arch:AVX2")
@@ -89,6 +90,18 @@ target_sources(math
     gbs/math.ixx
 )
 target_link_libraries(math
+    vecop
+)
+
+
+add_library(basis_functions)
+target_sources(basis_functions
+  PUBLIC
+    FILE_SET CXX_MODULES FILES
+    gbs/basisfunctions.ixx
+)
+target_link_libraries(basis_functions
+    math
     vecop
 )
 
