format is now widely supported

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -22,7 +22,7 @@ requirements:
     - eigen >=3.3.9 # turns c+20 warning off
     - boost >=1.74
     - rapidjson
-    - fmt
+    # - fmt
     - libiges
   run:
     - python {{ python }}
