--- a/recipe/recipe.yaml
+++ b/recipe/recipe.yaml
@@ -13,9 +13,9 @@ requirements:
     - sel(win): vs2022_win-64
     - ninja
     - cmake >=3.28
-    - python 3.10
+    - python "{{ python }}"
   host:
-    - python 3.10
+    - python "{{ python }}"
     - python-devtools
     - pybind11
     - nlopt
@@ -26,7 +26,7 @@ requirements:
     # - fmt
     - libiges
   run:
-    - python 3.10
+    - python "{{ python }}"
     - nlopt
     - vtk >=9.2
     - rapidjson
