--- a/gbs-render/CMakeLists.txt
+++ b/gbs-render/CMakeLists.txt
@@ -9,10 +9,7 @@ add_library(${PROJECT_NAME} SHARED ${GBS_RENDER_SRC_LIST})
 target_link_libraries(${PROJECT_NAME} 
     ${VTK_LIBRARIES}
     TBB::tbb
-    vecop
-    math
-    basis_functions
-    knots_functions
+    ${GBS_MODULES}
 )
 
 # tests
